# HPD-Agent

./: .gitignore  README.md  README.zh.md  demo_tool.py  pyproject.toml
docs/: CODE_INTEL.en.md  CODE_INTEL.md  CODE_INTEL_ADD_LANGUAGE.md
src/: main.py
src/agents/: __init__.py  coordinator_agent.py  expert_agent.py  query_agent.py  reviewer_agent.py
src/code_intel/: __init__.py  config.py  kernel.py  runtime.py  tracing.py
src/code_intel/core/: __init__.py  anchors.py  capabilities.py  errors.py  files.py  languages.py  models.py  workspace.py
src/code_intel/index/: __init__.py  context.py  indexer.py  invalidation.py  resolver.py  store.py
src/code_intel/providers/: __init__.py
src/code_intel/tools/: __init__.py  _helpers.py  _langchain.py  code_context.py  code_outline.py  code_search.py  code_semantic.py  code_verify.py  models.py  (+1 more)
src/commands/: __init__.py  completer.py  details.py
src/core/: enums.py  models.py  observability.py  state.py
src/llm/: __init__.py  client.py  prompts.py
src/memory/: context.py
src/nodes/: __init__.py  assessment.py  direct_answer.py  execution.py  planning.py  reviewer.py  scheduler.py  scheduler_node.py  synthesizer.py
src/tools/: __init__.py  apply_patch.py  invocation.py  read_file.py  terminal.py  write_file.py
src/workflow/: builder.py
tests/expert_loop/: test_expert_loop.py
tests/feedback_loop/: test_feedback_loop.py
tests/llm/: test_client.py  test_planning.py
tests/schedule_system/: test_scheduler_context.py
tests/tools/: test_apply_patch.py  test_invocation.py  test_tool_registry.py
(+81 files in other folders)
